<?xml version="1.0"?>
<package format="2">

  <name>jaco_control</name>
  <version>1.0.0</version>
  <description>The jaco_control package</description>

  <maintainer email="ibrahim.jad@outlook.dk">Ibrahim Jad Masri</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kinova_msgs</build_depend>
  <build_depend>kinova_driver</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>kinova_msgs</exec_depend>
  <exec_depend>kinova_driver</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

</package>
